--- a/scss/2.css
+++ b/scss/2.css
@@ -2,7 +2,7 @@
   height: 600px;
   width: 100%;
   position: static;
-  transform: translate(0px, 3160px);
+  transform: translate(0px, 3245px);
 }
 
 .container-4js {
